--- a/index.html
+++ b/index.html
@@ -11,12 +11,26 @@
     <title>The Freelancer</title>
   </head>
   <body>
-    <main>
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <header>
+        <!--Navbar-->
+        <nav class="navbar navbar-dark bg-dark px-5">
             <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">Navbar</span>
+                <span class="navbar-brand h1 my-0 text-info">Portfolio</span>
+                <span class="navbar-brand h3 my-0 text-info text-uppercase"><u>contact us</u></span>
             </div>
         </nav>
+        <!--Fine Navbar-->
+    </header>
+    <main>
+        <!--immagine profilo-->
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    
+                </div>
+            </div>
+        </div>                
+
     </main>
 
     <!--Mio Javascript-->
