Aggiunta immagine profilo con nome

--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
         <!--Fine Navbar-->
     </header>
     <main>
-        <!--immagine profilo-->
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    
+        <section class="bg-info">
+            <!--immagine profilo-->
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <img src="img/undraw_profile_pic_ic5t.svg" class="img-fluid d-block w-25 mx-auto pt-4" alt="immagine profilo">
+                        <h1>Pinco Pallo</h1>
+                        <p>Web Designer</p>
+                    </div>
                 </div>
             </div>
-        </div>                
+        </section>                
 
     </main>
 
