piccoli aggiustamenti per l'immagine

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
         <!--Fine Navbar-->
     </header>
     <main>
-        <section class="bg-info">
             <!--immagine profilo-->
-            <div class="container">
+            <div class="container-fluid bg-info">
                 <div class="row">
                     <div class="col text-center">
                         <img src="img/undraw_profile_pic_ic5t.svg" class="img-fluid d-block w-25 mx-auto pt-4" alt="immagine profilo">
@@ -33,7 +32,19 @@
                     </div>
                 </div>
             </div>
-        </section>                
+
+            <!--Fine immagine profilo-->
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="text-uppercase text-center">Portfolio</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class=""></div>
+                </div>
+            </div>
+                        
 
     </main>
 
