--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <!--immagine profilo-->
             <div class="container-fluid bg-info">
                 <div class="row">
-                    <div class="col text-center">
-                        <img src="img/undraw_profile_pic_ic5t.svg" class="img-fluid d-block w-25 mx-auto pt-4" alt="immagine profilo">
+                    <div class="col text-center pb-2">
+                        <img src="img/undraw_profile_pic_ic5t.svg" class="img-fluid d-block w-25 mx-auto pt-5" alt="immagine profilo">
                         <h1>Pinco Pallo</h1>
                         <p>Web Designer</p>
                     </div>
@@ -37,15 +37,37 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h5 class="text-uppercase text-center">Portfolio</h1>
+                        <h5 class="text-uppercase text-center py-3">Portfolio</h1>
                     </div>
                 </div>
-                <div class="row">
-                    <div class=""></div>
+                        <!--Inserimento prime 3 immagini-->
+                <div class="row">        
+                        <div class="card-deck text-center">
+                                <div class="card w-25">
+                                    <img class="card-img-top" src="img/portfolio/cabin.png" alt="immagine Cabina">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Cabin Website</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    </div>
+                                </div>
+                                <div class="card w-25">
+                                    <img class="card-img-top" src="img/portfolio/cake.png" alt="Immagine Torta">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                    </div>
+                                </div>
+                                <div class="card w-25">
+                                    <img class="card-img-top" src="img/portfolio/circus.png" alt="Immagine circo">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                    </div>
+                                </div>
+                        </div>  
                 </div>
             </div>
                         
-
     </main>
 
     <!--Mio Javascript-->
