Sistemazione delle immagini dei vari siti

--- a/index.html
+++ b/index.html
@@ -22,52 +22,101 @@
         <!--Fine Navbar-->
     </header>
     <main>
-            <!--immagine profilo-->
-            <div class="container-fluid bg-info">
-                <div class="row">
-                    <div class="col text-center pb-2">
-                        <img src="img/undraw_profile_pic_ic5t.svg" class="img-fluid d-block w-25 mx-auto pt-5" alt="immagine profilo">
-                        <h1>Pinco Pallo</h1>
-                        <p>Web Designer</p>
-                    </div>
+          <!--immagine profilo-->
+          <div class="container-fluid bg-info">
+            <div class="row">
+                <div class="col text-center pb-2">
+                    <img src="img/undraw_profile_pic_ic5t.svg" class="img-fluid d-block w-25 mx-auto pt-5" alt="immagine profilo">
+                    <h1>Pinco Pallo</h1>
+                    <p>Web Designer</p>
                 </div>
             </div>
+        </div>
+        <!--Fine immagine profilo-->
 
-            <!--Fine immagine profilo-->
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h5 class="text-uppercase text-center py-3">Portfolio</h1>
-                    </div>
-                </div>
-                        <!--Inserimento prime 3 immagini-->
-                <div class="row">        
-                        <div class="card-deck text-center">
-                                <div class="card w-25">
-                                    <img class="card-img-top" src="img/portfolio/cabin.png" alt="immagine Cabina">
-                                    <div class="card-body text-center">
-                                        <h5 class="card-title">Cabin Website</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                    </div>
-                                </div>
-                                <div class="card w-25">
-                                    <img class="card-img-top" src="img/portfolio/cake.png" alt="Immagine Torta">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                                    </div>
-                                </div>
-                                <div class="card w-25">
-                                    <img class="card-img-top" src="img/portfolio/circus.png" alt="Immagine circo">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                                    </div>
-                                </div>
-                        </div>  
+        <!--Inizio contenitore Portfolio con immagini e bottoni-->
+        <div class="container">
+            <!--Riga Portfolio-->
+            <div class="row">
+                <div class="col">
+                    <h5 class="text-uppercase text-center py-3">Portfolio</h1>
                 </div>
             </div>
-                        
+            <!--Prima riga 3 immagini-->
+            <div class="row">
+                <!--1° card Cabina -->
+                <div class="col">
+                    <div class="card text-center shadow bg-body">
+                        <img src="img/portfolio/cabin.png" class="card-img-top" alt="immagine cabina">
+                        <div class="card-body fs-6 p-0">
+                            <h4 class="text-center my-3">Cabin Website</h4>
+                            <button type="button" class="btn btn-info mx-2 mb-3">Preview</button>
+                            <button type="button" class="btn btn-outline-info mx-2 mb-3">Visit Site</button>
+                        </div>
+                    </div>
+                </div> 
+                <!--2° card Torta -->
+                <div class="col">
+                    <div class="card text-center shadow bg-body">
+                        <img src="img/portfolio/cake.png" class="card-img-top" alt="Immagine torta">
+                        <div class="card-body fs-6 p-0">
+                            <h4 class="text-center my-3">Cabin Website</h4>
+                            <button type="button" class="btn btn-info mx-2 mb-3">Preview</button>
+                            <button type="button" class="btn btn-outline-info mx-2 mb-3">Visit Site</button>
+                        </div>
+                    </div>
+                </div>
+                <!--3° card Circo -->
+                <div class="col">
+                    <div class="card text-center shadow bg-body">
+                        <img src="img/portfolio/circus.png" class="card-img-top" alt="immagine circo">
+                        <div class="card-body fs-6 p-0">
+                            <h4 class="text-center my-3">Cabin Website</h4>
+                            <button type="button" class="btn btn-info mx-2 mb-3">Preview</button>
+                            <button type="button" class="btn btn-outline-info mx-2 mb-3">Visit Site</button>
+                        </div>
+                    </div>
+                </div>       
+            </div>   
+            <!--Seconda riga 3 immagini-->
+            <div class="row mt-5">
+                <!--1° card Game Web site -->
+                <div class="col">
+                    <div class="card text-center shadow bg-body">
+                        <img src="img/portfolio/game.png" class="card-img-top" alt="immagine game Website">
+                        <div class="card-body fs-6 p-0">
+                            <h4 class="text-center my-3">Game Website</h4>
+                            <button type="button" class="btn btn-info mx-2 mb-3">Preview</button>
+                            <button type="button" class="btn btn-outline-info mx-2 mb-3">Visit Site</button>
+                        </div>
+                    </div>
+                </div> 
+                <!--2° card Torta -->
+                <div class="col">
+                    <div class="card text-center shadow bg-body">
+                        <img src="img/portfolio/safe.png" class="card-img-top" alt="Immagine Safe Website">
+                        <div class="card-body fs-6 p-0">
+                            <h4 class="text-center my-3">Safe Website</h4>
+                            <button type="button" class="btn btn-info mx-2 mb-3">Preview</button>
+                            <button type="button" class="btn btn-outline-info mx-2 mb-3">Visit Site</button>
+                        </div>
+                    </div>
+                </div>
+                <!--3° card Circo -->
+                <div class="col">
+                    <div class="card text-center shadow bg-body">
+                        <img src="img/portfolio/submarine.png" class="card-img-top" alt="immagine Submarine Website">
+                        <div class="card-body fs-6 p-0">
+                            <h4 class="text-center my-3">Submarine Website</h4>
+                            <button type="button" class="btn btn-info mx-2 mb-3">Preview</button>
+                            <button type="button" class="btn btn-outline-info mx-2 mb-3">Visit Site</button>
+                        </div>
+                    </div>
+                </div>       
+            </div>                
+        </div>
+        <!--Fine contenitore Portfolio con immagini e bottoni-->
+
     </main>
 
     <!--Mio Javascript-->
