--- a/index.html
+++ b/index.html
@@ -117,6 +117,19 @@
         </div>
         <!--Fine contenitore Portfolio con immagini e bottoni-->
 
+        <!--Inizio contenitore form-->
+        <div class="container">
+            <!--Riga Want an Offer?-->
+            <div class="row">
+                <div class="col">
+                    <h5 class="text-uppercase text-center py-3">want an offer?</h1>
+                </div>
+            </div>
+            <div class="row">
+
+                </div>
+            </div>
+        </div>
     </main>
 
     <!--Mio Javascript-->
