--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>The Freelancer</title>
+    <style>
+        p.text-muted{
+            font-size: 0.8em;
+        }
+    </style>
   </head>
   <body>
     <header>
@@ -186,11 +191,14 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="bg-dark">
         <div class="container">
             <div class="row">
-                <div class="col">
-                    
+                <div class="col text-center">
+                    <h3 class="text-muted py-3">location</h2>
+                    <p class="text-muted">2215 John Daniel Drive</p>
+                    <p class="text-muted">Clark,MO 65243</p>
+                    <p class="text-muted pb-4">Copyright &#169; Your Website 2021</p>
                 </div>
             </div>
         </div>
