primo inizio di totale dal form

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
                             <!--Email-->
                             <div class="form-group col-md-6 my-2">
-                                <label for="input-Email">Email</label>
-                                <input type="email" class="form-control" id="input-Email" placeholder="Email">
+                                <label for="input-email">Email</label>
+                                <input type="email" class="form-control" id="input-email" placeholder="Email">
                             </div>
 
                             <!--Ore Richieste-->
@@ -187,6 +187,7 @@
                           </form>
                     </div>
                     <!--Fine Riga Form-->
+                    <p id="risultato"></p>
                 </div>
             </div>
         </div>
